# android-automator

./: .env.example  .gitignore  README.md  pyproject.toml
automator/: __init__.py  config.py  locator.py  logging.py  main.py  recorder.py
automator/action/: __init__.py  base.py  u2_actions.py
automator/api/: __init__.py  deps.py
automator/api/routes/: __init__.py  devices.py  flows.py  inspector.py  playground.py  recorder.py  runs.py  system.py  tasks.py
automator/cognition/: __init__.py  base.py  llm_planner.py  rule_engine.py
automator/device/: __init__.py  base.py  exceptions.py  manager.py  u2_device.py
automator/flow/: __init__.py  base.py  context.py  runner.py  yaml_loader.py
automator/flow/steps/: __init__.py  app.py  assert_.py  click.py  extract.py  input.py  script.py  swipe.py  wait.py
automator/perception/: __init__.py  base.py  ocr.py  screenshot.py  stream.py  vlm.py
automator/storage/: __init__.py  db.py  models.py  repository.py
automator/task/: __init__.py  executor.py  scheduler.py  states.py
data/: .gitkeep
flows/examples/: 01_click_demo.yaml  02_crawl_list.yaml  03_input_demo.yaml  04_jht_real.yaml  05_jht_products_collect.yaml  06_pdd_search_toys.yaml  07_pdd_collect_skus.yaml
scripts/: doctor.py  init_device.py
tests/: test_api.py  test_context.py  test_playground.py  test_recorder.py  test_storage.py  test_yaml_loader.py
tests/perception/: test_stream.py
web/: index.html
web/static/: app.js  styles.css
