[project]
name = "automator"
version = "0.1.0"
description = "Android 真机自动化平台 —— 基于 uiautomator2 的可扩展自动化底盘"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "bloks" }]
dependencies = [
    "uiautomator2>=3.2.9",
    "adbutils>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
automator = "automator.main:run"
automator-doctor = "automator.scripts.doctor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automator"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
